[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/RetroGamingBig.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/RetroGamingMedium.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=3]

[node name="PauseMenu" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 354.0
margin_top = 145.0
margin_right = 669.0
margin_bottom = 455.0
custom_constants/separation = 60

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 315.0
margin_bottom = 77.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "Pause"
align = 1
valign = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 315.0
margin_bottom = 310.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="ContinueContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 315.0
margin_bottom = 51.0
custom_constants/separation = 20

[node name="ContinueSelection" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/ContinueContainer"]
margin_right = 24.0
margin_bottom = 51.0
rect_min_size = Vector2( 24, 51 )
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="ContinueLabel" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/ContinueContainer"]
margin_left = 44.0
margin_right = 267.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "Continue"

[node name="OptionsContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 315.0
margin_bottom = 112.0
custom_constants/separation = 20

[node name="OptionsSelection" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsContainer"]
margin_right = 24.0
margin_bottom = 51.0
rect_min_size = Vector2( 24, 51 )
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="OptionsLabel" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsContainer"]
margin_left = 44.0
margin_right = 315.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "Mute Music"

[node name="ExitContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 315.0
margin_bottom = 173.0
custom_constants/separation = 20

[node name="ExitSelection" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/ExitContainer"]
margin_right = 24.0
margin_bottom = 51.0
rect_min_size = Vector2( 24, 51 )
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="ExitLabel" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/ExitContainer"]
margin_left = 44.0
margin_right = 291.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "Main Menu"
